# Calculadora-chida-

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
