[tool.poetry]
name = "pycalc"
version = "0.1.0"
description = ""
authors = ["Henrik"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyqt6 = "^6.8.0"
pyinstaller = "^6.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
poethepoet = "^0.28.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
build = "pyinstaller --clean --noconsole --name=Calculadora main.py "
